--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <receiver android:name="com.example.jm.buywithme.SFV" />
 
         <activity android:name="com.example.jm.buywithme.MyLists"></activity>
+        <activity android:name="com.example.jm.buywithme.Settings" android:parentActivityName=".MainWindow" android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name="com.example.jm.buywithme.Settings2" android:parentActivityName=".MyLists" android:windowSoftInputMode="stateHidden"></activity>
+
     </application>
 
 </manifest>
