--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,13 +35,17 @@
             android:theme="@style/AppTheme.CustomTheme"
             android:windowSoftInputMode="stateHidden"></activity>
 
+        <activity
+            android:name="com.example.jm.buywithme.OwnProduct"
+            android:theme="@style/AppTheme.CustomTheme"
+            android:windowSoftInputMode="stateHidden"></activity>
         <receiver android:name="com.example.jm.buywithme.SFV" />
 
         <activity android:name="com.example.jm.buywithme.MyLists"></activity>
         <activity android:name="com.example.jm.buywithme.Settings" android:parentActivityName=".MainWindow" android:windowSoftInputMode="stateHidden"></activity>
         <activity android:name="com.example.jm.buywithme.Settings2" android:parentActivityName=".MyLists" android:windowSoftInputMode="stateHidden"></activity>
         <activity android:name="com.example.jm.buywithme.EditElement" android:parentActivityName=".MainWindow" android:windowSoftInputMode="stateHidden"></activity>
-
+        <activity android:name="com.example.jm.buywithme.NewProductSettings" android:parentActivityName=".MainWindow" android:windowSoftInputMode="stateHidden"></activity>
     </application>
 
 </manifest>
