Creation of "Recently Prodcuts": done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,13 @@
             android:name="com.example.jm.buywithme.OwnProduct"
             android:theme="@style/AppTheme.CustomTheme"
             android:windowSoftInputMode="stateHidden"></activity>
-        <receiver android:name="com.example.jm.buywithme.SFV" />
+
+        <activity
+            android:name="com.example.jm.buywithme.RecentProduct"
+            android:theme="@style/AppTheme.CustomTheme"
+            android:windowSoftInputMode="stateHidden"></activity>
+        
+        <!-- <receiver android:name="com.example.jm.buywithme.SFV" /> -->
 
         <activity android:name="com.example.jm.buywithme.MyLists"></activity>
         <activity android:name="com.example.jm.buywithme.Settings" android:parentActivityName=".MainWindow" android:windowSoftInputMode="stateHidden"></activity>
